--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,21 @@
 {
 	"compilerOptions": {
-		"baseUrl": "./src",
-		"paths": {
-			"@components/*": ["components/*"],
-			"@services/*": ["services/*"]
-		},
-		"typeRoots": ["./node_modules/@types", "./src/types"],
-		"target": "ES2017",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"allowImportingTsExtensions": true,
-		"forceConsistentCasingInFileNames": true,
-		"noFallthroughCasesInSwitch": true,
+		"target": "ES2020",
+		"useDefineForClassFields": true,
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "esnext",
-		"moduleResolution": "node",
+		"skipLibCheck": true,
+		"types": ["node", "jest", "@testing-library/jest-dom"],
+		"esModuleInterop": true,
+
+		/* Bundler mode */
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx"
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "**/*.spec.ts"]
+	"include": ["src"],
+	"references": [{ "path": "./tsconfig.node.json" }]
 }
