--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,14 @@
 		"skipLibCheck": true,
 		"types": ["node", "jest", "@testing-library/jest-dom"],
 		"esModuleInterop": true,
+		"jsx": "react-jsx",
+		"moduleResolution": "Node",
 
-		/* Bundler mode */
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "react-jsx"
+		/* Linting */
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src"],
-	"references": [{ "path": "./tsconfig.node.json" }]
+	"include": ["src"]
 }
